# sigma-compiler

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  update-mirror
.github/workflows/: update-mirror.yml
sigma-compiler-core/: Cargo.toml  README.md
sigma-compiler-core/src/: codegen.rs  notequals.rs  pedersen.rs  rangeproof.rs  syntax.rs  transform.rs
sigma-compiler-core/src/sigma/: codegen.rs  combiners.rs  types.rs
sigma-compiler-derive/: Cargo.toml  README.md
sigma-compiler-derive/src/: lib.rs
sigma_compiler_core/: Cargo.toml
sigma_compiler_core/src/: codegen.rs  combiners.rs  lib.rs  main.rs  notequals.rs  pedersen.rs  pubscalareq.rs  rangeproof.rs  substitution.rs  syntax.rs  transform.rs
sigma_compiler_core/src/sigma/: codegen.rs  combiners.rs  types.rs
sigma_compiler_derive/: Cargo.toml
sigma_compiler_derive/src/: lib.rs
src/: dumper.rs  lib.rs  rangeutils.rs  vecutils.rs
tests/: basic.rs  basic_sum.rs  basic_vec.rs  disj.rs  disj_vec.rs  dl.rs  dot_product.rs  emptystatement.rs  left_expr.rs  notequals.rs  pubscalars.rs  pubscalars_or.rs  pubscalars_or_and.rs  pubscalars_or_and_vec.rs  pubscalars_or_vec.rs  pubscalars_vec.rs  pubstatements.rs  pubstatements_vec.rs  range.rs  range_dump.rs  simple_or.rs  substitution_or.rs  substitution_vec.rs  subtract.rs  subtract_vec.rs  threshold.rs  threshold_pubscalars.rs  two_true.rs
