[package]
name = "sigma-compiler"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://git-crysp.uwaterloo.ca/SigmaProtocol/sigma-compiler"
description = "Crate for automatically generating code for sigma zero-knowledge proof protocols of more complex statements than are supported by the sigma-proofs crate.  The statements given to this crate are compiled into statements about linear combinations of points, and transformed into the sigma-proofs API."

[dependencies]
group = "0.13"
rand = "0.8.5"
sigma-compiler-derive = "=0.2.0"
sigma-proofs = "0.2.0"
subtle = "2.6"

[dev-dependencies]
curve25519-dalek = { version = "4", features = [ "group", "rand_core", "digest" ] }
sha2 = "0.10"

[features]
# Dump (to stdout or to a string) the value of the instance on both the
# prover's and verifier's side.  They should match.
dump = [ "sigma-compiler-derive/dump" ]
# default = ["dump"]

[patch.crates-io]
sigma-compiler-derive = { path = "sigma-compiler-derive" }
sigma-compiler-core = { path = "sigma-compiler-core" }
