[package]
name = "sigma_compiler_core"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "visit", "visit-mut", "full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
# Dump (to stdout) the value of the instance on both the prover's and
# verifier's side.  They should match.
dump = []
# default = ["dump"]
